# Awesome-Pushup-Standards

./: .env.example  .gitignore  .gitmodules  .lychee.toml  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  code-pushup.config.ts  docker-compose.e2e.yml  eslint.config.js  knip.config.ts  lint-staged.config.js  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.e2e.config.ts
.changeset/: README.md  architecture-rules-strict-layers.md  audit-contract-rigor.md  error-logging-broad-except.md  initial-release.md  preset-categories-wired.md  skip-zero-breaking.md
.github/: labeler.yml
.github/workflows/: assign-pr-author.yml  ci.yml  code-pushup-fork.yml  code-pushup.yml  dependency-review.yml  git-checks.yml  pr-commitlint.yml  pr-labeler.yml  publish.yml  release.yml
apps/docs/: README.md  astro.config.mjs  doc-registry.json  package.json  project.json  sidebar.generated.mjs
docs/: README.md  domains.md  llm-configuration.md  monorepo-ci.md  plugin-authoring.md  scoring-model.md
e2e/plugin-api-openapi-e2e/: project.json
e2e/plugin-python-quality-e2e/mocks/fixtures/good/: pyproject.toml  test_demo.py
examples/cpp-qt-demo/: README.md  (+3 more)
examples/python-fastapi-demo/: README.md  code-pushup.config.ts  package.json  pyproject.toml
examples/python-fastapi-demo/app/: main.py
scripts/: docs-generated-paths.mjs  plugin-catalog-meta.mjs  plugins-catalog.intro.md  run-e2e.mjs  scaffold-e2e.mjs  sync-docs-to-starlight.mjs  verify-docs-sync.mjs
(+169 files in other folders)
