[project]
name = "python-fastapi-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.0",
  "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "bandit>=1.8",
  "pip-audit>=2.7",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
