[project]
name = "demo"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
